@@ -1,35 +1,38 @@
 package agency.highlysuspect.dazzle2.block;
 
-import agency.highlysuspect.dazzle2.Init;
 import agency.highlysuspect.dazzle2.LampStyle;
-import net.fabricmc.fabric.api.object.builder.v1.block.FabricBlockSettings;
 import net.minecraft.block.*;
+import net.minecraft.registry.RegistryKeys;
 import net.minecraft.state.property.Properties;
 import net.minecraft.util.DyeColor;
-import net.minecraft.util.Util;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.Direction;
-import net.minecraft.util.registry.Registry;
 import net.minecraft.world.BlockView;
+import net.minecraftforge.eventbus.api.IEventBus;
+import net.minecraftforge.registries.DeferredRegister;
+import net.minecraftforge.registries.RegistryObject;
 
 import java.util.EnumMap;
 import java.util.List;
+import java.util.Map;
 import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 public class DazzleBlocks {
-	public static final List<LampBlock> LAMPS = LampStyle.ALL.stream()
-		.map(style -> style.instantiateBlock(FabricBlockSettings.copyOf(Blocks.REDSTONE_LAMP)))
-		.collect(Collectors.toList());
-	
-	public static final LightSensorBlock LIGHT_SENSOR = new LightSensorBlock(FabricBlockSettings.copyOf(Blocks.OBSERVER));
-	public static final InvisibleTorchBlock INVISIBLE_TORCH = new InvisibleTorchBlock(FabricBlockSettings.copyOf(Blocks.TORCH)
+	public static DeferredRegister<Block> BLOCKS = DeferredRegister.create(RegistryKeys.BLOCK, "dazzle");
+	public static final List<RegistryObject<LampBlock>> LAMPS = LampStyle.ALL.stream()
+		.map(style -> BLOCKS.register(style.toName(), style.instantiateBlock(AbstractBlock.Settings.copy(Blocks.REDSTONE_LAMP)))).toList();
+
+	public static final RegistryObject<LightSensorBlock> LIGHT_SENSOR = BLOCKS.register("light_sensor", () -> new LightSensorBlock(AbstractBlock.Settings.copy(Blocks.OBSERVER)));
+	public static final RegistryObject<InvisibleTorchBlock> INVISIBLE_TORCH = BLOCKS.register("invisible_torch", () -> new InvisibleTorchBlock(AbstractBlock.Settings.copy(Blocks.TORCH)
 		.nonOpaque().noCollision().breakInstantly()
 		.luminance(state -> state.get(InvisibleTorchBlock.LIGHT))
 		.suffocates((state, world, pos) -> false)
 		.blockVision((state, world, pos) -> false)
-	);
-	public static final LightAirBlock LIGHT_AIR = new LightAirBlock(FabricBlockSettings.of(Material.AIR)
+	));
+
+	public static final RegistryObject<LightAirBlock> LIGHT_AIR = BLOCKS.register("light_air", () -> new LightAirBlock(AbstractBlock.Settings.copy(Blocks.AIR)
 		.nonOpaque().noCollision().breakInstantly()
 		.luminance(state -> state.get(LightAirBlock.LIGHT))
 		.suffocates((state, world, pos) -> false)
@@ -37,72 +40,51 @@ public class DazzleBlocks {
 		.air() //is this a good idea?
 		.dropsNothing()
 		.ticksRandomly()
-	);
-	public static final ProjectedLightPanelBlock PROJECTED_LIGHT_PANEL = new ProjectedLightPanelBlock(FabricBlockSettings.copyOf(Blocks.BONE_BLOCK)
+	));
+
+	public static final RegistryObject<ProjectedLightPanelBlock> PROJECTED_LIGHT_PANEL = BLOCKS.register("projected_light_panel", () -> new ProjectedLightPanelBlock(AbstractBlock.Settings.copy(Blocks.BONE_BLOCK)
 		.luminance(state -> state.get(ProjectedLightPanelBlock.POWER))
 		.ticksRandomly()
-	);
+	));
 	
-	public static final RedstoneTorchBlock DIM_REDSTONE_TORCH = new RedstoneTorchBlock(FabricBlockSettings.copyOf(Blocks.REDSTONE_TORCH)
+	public static final RegistryObject<RedstoneTorchBlock> DIM_REDSTONE_TORCH = BLOCKS.register("dim_redstone_torch", () -> new RedstoneTorchBlock(Block.Settings.copy(Blocks.REDSTONE_TORCH)
 		.luminance(state -> state.get(Properties.LIT) ? 2 : 0)
 		.breakInstantly()
-		.drops(Init.id("blocks/dim_redstone_torch")) //Idk why, but if I don't have this the loot table is the same as air block
+//			.dropsLike(Init.id("blocks/dim_redstone_torch")) //Idk why, but if I don't have this the loot table is the same as air block
 	) {
 		//Protected constructor lmao, also i need to override this anyways
 		@Override
 		public int getWeakRedstonePower(BlockState state, BlockView world, BlockPos pos, Direction direction) {
 			return super.getWeakRedstonePower(state, world, pos, direction) == 15 ? 1 : 0;
-		}
-	};
-	
-	public static final RedstoneTorchBlock DIM_REDSTONE_WALL_TORCH = new WallRedstoneTorchBlock(FabricBlockSettings.copyOf(Blocks.REDSTONE_WALL_TORCH)
-		.luminance(state -> state.get(Properties.LIT) ? 2 : 0)
-		.dropsLike(DIM_REDSTONE_TORCH)
-		.breakInstantly()
-	) {
-		//Protected constructor lmao, also i need to override this anyways
-		@Override
-		public int getWeakRedstonePower(BlockState state, BlockView world, BlockPos pos, Direction direction) {
-			return super.getWeakRedstonePower(state, world, pos, direction) == 15 ? 1 : 0;
-		}
-	};
-	
-	public static final EnumMap<DyeColor, FlareBlock> FLARES = Util.make(new EnumMap<>(DyeColor.class), map -> {
-		for(DyeColor color : DyeColor.values()) {
-			map.put(color, new FlareBlock(color, FabricBlockSettings.copyOf(INVISIBLE_TORCH).luminance(15)));
 		}
 	});
 	
-	public static final EnumMap<DyeColor, ColorHolderBlock.Simple> DYED_SHROOMLIGHTS = sixteenColors(color -> new ColorHolderBlock.Simple(color, FabricBlockSettings.copyOf(Blocks.SHROOMLIGHT).requiresTool().materialColor(color)));
-	public static final Block POLISHED_SHROOMLIGHT = new Block(FabricBlockSettings.copyOf(Blocks.SHROOMLIGHT).requiresTool());
-	public static final EnumMap<DyeColor, ColorHolderBlock.Simple> DYED_POLISHED_SHROOMLIGHTS = sixteenColors(color -> new ColorHolderBlock.Simple(color, FabricBlockSettings.copyOf(Blocks.SHROOMLIGHT).requiresTool().materialColor(color)));
-	
-	public static final EnumMap<DyeColor, DyedEndRodBlock> DYED_END_RODS = sixteenColors(color -> new DyedEndRodBlock(color, FabricBlockSettings.copyOf(Blocks.END_ROD).materialColor(color)));
-	
-	public static void onInitialize() {
-		for(LampBlock lamp : LAMPS) {
-			Registry.register(Registry.BLOCK, lamp.style.toIdentifier(), lamp);
+	public static final RegistryObject<RedstoneTorchBlock> DIM_REDSTONE_WALL_TORCH = BLOCKS.register("dim_redstone_wall_torch", () -> new WallRedstoneTorchBlock(AbstractBlock.Settings.copy(Blocks.REDSTONE_WALL_TORCH)
+		.luminance(state -> state.get(Properties.LIT) ? 2 : 0)
+			.lootFrom(DIM_REDSTONE_TORCH)
+		.breakInstantly()
+	) {
+		//Protected constructor lmao, also i need to override this anyways
+		@Override
+		public int getWeakRedstonePower(BlockState state, BlockView world, BlockPos pos, Direction direction) {
+			return super.getWeakRedstonePower(state, world, pos, direction) == 15 ? 1 : 0;
 		}
-		
-		Registry.register(Registry.BLOCK, Init.id("light_sensor"), LIGHT_SENSOR);
-		Registry.register(Registry.BLOCK, Init.id("invisible_torch"), INVISIBLE_TORCH);
-		Registry.register(Registry.BLOCK, Init.id("light_air"), LIGHT_AIR);
-		Registry.register(Registry.BLOCK, Init.id("projected_light_panel"), PROJECTED_LIGHT_PANEL);
-		
-		Registry.register(Registry.BLOCK, Init.id("dim_redstone_torch"), DIM_REDSTONE_TORCH);
-		Registry.register(Registry.BLOCK, Init.id("dim_redstone_wall_torch"), DIM_REDSTONE_WALL_TORCH);
-		
-		FLARES.forEach((color, block) -> Registry.register(Registry.BLOCK, Init.id(color.asString() + "_flare"), block));
-		
-		DYED_SHROOMLIGHTS.forEach((color, block) -> Registry.register(Registry.BLOCK, Init.id(color.asString() + "_shroomlight"), block));
-		Registry.register(Registry.BLOCK, Init.id("polished_shroomlight"), POLISHED_SHROOMLIGHT);
-		DYED_POLISHED_SHROOMLIGHTS.forEach((color, block) -> Registry.register(Registry.BLOCK, Init.id(color.asString() + "_polished_shroomlight"), block));
-		
-		DYED_END_RODS.forEach((color, block) -> Registry.register(Registry.BLOCK, Init.id(color.asString() + "_end_rod"), block));
+	});
+	
+	public static final EnumMap<DyeColor, RegistryObject<FlareBlock>> FLARES = sixteenColors(color -> BLOCKS.register(color.asString() + "_flare", () -> new FlareBlock(color, AbstractBlock.Settings.copy(INVISIBLE_TORCH.get()).luminance(a -> 15))));
+
+	public static final EnumMap<DyeColor, RegistryObject<ColorHolderBlock.Simple>> DYED_SHROOMLIGHTS = sixteenColors(color -> BLOCKS.register(color.asString() + "_shroomlight", () -> new ColorHolderBlock.Simple(color, AbstractBlock.Settings.copy(Blocks.SHROOMLIGHT).requiresTool().mapColor(color))));
+	public static final RegistryObject<Block> POLISHED_SHROOMLIGHT = BLOCKS.register("polished_shroomlight", () -> new Block(AbstractBlock.Settings.copy(Blocks.SHROOMLIGHT).requiresTool()));
+	public static final EnumMap<DyeColor, RegistryObject<ColorHolderBlock.Simple>> DYED_POLISHED_SHROOMLIGHTS = sixteenColors(color -> BLOCKS.register(color.asString() + "_polished_shroomlight", () -> new ColorHolderBlock.Simple(color, AbstractBlock.Settings.copy(Blocks.SHROOMLIGHT).requiresTool().mapColor(color))));
+	
+	public static final EnumMap<DyeColor, RegistryObject<DyedEndRodBlock>> DYED_END_RODS = sixteenColors(color -> BLOCKS.register(color.asString() + "_end_rod", ()  -> new DyedEndRodBlock(color, AbstractBlock.Settings.copy(Blocks.END_ROD).mapColor(color))));
+	
+	public static void onInitialize(IEventBus bus) {
+		BLOCKS.register(bus);
 	}
 	
-	private static <T> EnumMap<DyeColor, T> sixteenColors(Function<DyeColor, T> maker) {
-		EnumMap<DyeColor, T> map = new EnumMap<>(DyeColor.class);
+	private static <T> EnumMap<DyeColor, RegistryObject<T>> sixteenColors(Function<DyeColor, RegistryObject<T>> maker) {
+		EnumMap<DyeColor, RegistryObject<T>> map = new EnumMap<>(DyeColor.class);
 		for(DyeColor color : DyeColor.values()) {
 			map.put(color, maker.apply(color));
 		}
